--- a/mallvictoria/mallvictoria/static/css/estilo.css
+++ b/mallvictoria/mallvictoria/static/css/estilo.css
@@ -57,6 +57,9 @@ box-shadow: 0 0 15px #DEDBD3;
 padding-top: 10px;	
 }
 header{
+	-moz-box-shadow: 0 0 15px #DEDBD3;
+	-webkit-box-shadow: 0 0 15px #DEDBD3;
+	box-shadow: 0 0 15px #DEDBD3;	
 	position: relative;
 	background-image: url('../img/wallpaper.jpg');	
 	-webkit-background-size: cover;
@@ -395,6 +398,31 @@ article .articulo .descripcion .precio-detalle sup{
 		width: 100%;	
 		background: url(../img/down.png) no-repeat 97% #fff;		
 		-webkit-appearance:none;
+	}
+
+	#id_costo{
+		height: 28px;
+		line-height: 25px;
+	}
+	
+	.errorlist{
+		list-style: none;
+		margin: 0px;
+		display: inline-block; 
+		display: block;
+		padding: 0px;
+		margin-top: -15px;
+		margin-bottom: 12px;
+		color: #cc1b1b;
+		font-size: 12px;
+		text-align: left;
+	}
+	.errorlist .errorlist{
+		color: #777;
+		margin-left: 5px;
+	}
+	#id_imagen{
+		margin-bottom: 14px;
 	}
 
 	/* Fin Lockers */
