--- a/mallvictoria/mallvictoria/static/css/estilo.css
+++ b/mallvictoria/mallvictoria/static/css/estilo.css
@@ -135,7 +135,6 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f7b10e', end
 
 }
 footer .footer-contenido{
-	height: 400px;
 	background: #5f5f5f
 }
 footer .footer-social{
@@ -429,6 +428,24 @@ article .articulo .descripcion .precio-detalle sup{
 .msg_busqueda{
 	margin:10px 15px 200px 15px;
 	font-size:16px;	
+}
+
+#text_busqueda{
+	margin-top: 4px;
+}
+
+.social-texto{
+	font-size: 14px;
+	font-style: normal;
+	vertical-align: top;
+}
+.boton_social{
+	padding: 3px;
+	border: 2px solid #ccc;
+	border-radius: 8px;	
+	width: 100px;
+	text-align: center;	
+	display: inline-block;	
 }
 
 @media screen and (max-width: 980px){
