--- a/mallvictoria/mallvictoria/static/css/estilo.css
+++ b/mallvictoria/mallvictoria/static/css/estilo.css
@@ -18,6 +18,18 @@ src: url(../fonts/ProximaNova-Regular.otf);
       font-family: "GeneralFoundicons";
 }
 
+.spinner{
+	border:1px solid #eee;
+	text-align: center;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	background-color: rgb(250,250,250);
+	margin-bottom: 22px;
+	border-radius: 4px;
+	color: #bbb;
+	width: 100%;
+}
+
 nav #navegacion{
 background: #0f0f0f; /* Old browsers */
 background: -moz-linear-gradient(top, #0f0f0f 0%, #2d2d2d 49%, #4f4f4f 100%); /* FF3.6+ */
